--- a/examples/support_touch_device.html
+++ b/examples/support_touch_device.html
@@ -48,23 +48,23 @@
                                     <div class="row" style="margin: auto; display: flex; justify-content: center;">
                                         <div class="">
                                             <div class="thumbnail" data-type="container-content"
-                                                style="border-radius: 15px; background-color: rgb(236, 236, 236); border: none; padding: 12px;">
+                                                style="border-radius: 15px; background-color: #C76FE8; border: none; padding: 12px;">
                                                 <div data-type="component-text">
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
+                                                        style="background-color: #A774F2; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: rgb(255, 255, 255)">LINK
+                                                        style="background-color: #7C73DB; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: rgb(255, 255, 255)">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); background-color: black; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
+                                                        style="background-color: #7491F2; border: none; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold;">LINK
                                                     </a>
                                                     <a href="#" class="btn btn-default" role="button"
-                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: rgb(255, 255, 255);">LINK
+                                                        style="background-color: #75B5EB; border-radius: 20px; margin: 8px; padding: 8px; font-weight: bold; color: rgb(255, 255, 255);">LINK
                                                     </a>
                                                     <br>
                                                     <a href="#" class="btn btn-primary" role="button"
-                                                        style="background: rgb(0,12,219); background: linear-gradient(130deg, rgb(46, 0, 212) 50%, rgb(206, 30, 59) 85%); border: none; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px; font-weight: bold; font-size: 1.8rem;">WEBSITE
+                                                        style="background-color: black; border-radius: 20px; display: flex; justify-content: center; margin: 8px; padding: 12px; font-weight: bold; font-size: 1.8rem;">WEBSITE
                                                     </a>
                                                 </div>
                                             </div>
